sumo/tests/sumo/output/e3/errors/freq_false/errors.sumo
Error: Attribute 'freq' in definition of e3-detector '4/1to3/1' is not a time value.
Quitting (on error).
